@startuml
IPlugin <|-- Plugin
PluginMarker <|-- Plugin

class PluginMarker {
    + using plugin Plugin
}

class IPlugin {
    + IPlugin(std::string moduleName)
    {abstract} + ~IPlugin()
    
    {abstract} + void init()
    
    {abstract} std::set<std::type_index> depends()
    
    .. Entity factory public interface ..
    + std::shared_ptr<Entity> entity()
    
    # {abstract} std::shared_ptr<IEntity> getEntity(const std::type_info &type)
}

class Plugin {
    + Plugin()
    + void init()
    + ~Plugin()
    

    - std::set<std::type_index> depends()
    .. Entity factory implementation ..
    - std::shared_ptr<IEntity> getEntity(const std::type_info &type)
    
    == Some module specific implements ==
}
@enduml
